Summary of changes between libmikmod 3.3.4 and libmikmod 3.3.5 ():
==========================================================================

libmikmod v3.3.5 was released on XX-XXX-XXXX.
This is a minor bugfix / maintenance release.

- mikmod.texi: Fixed document generation using newer texinfo.
- Small cmake and autotools updates/fixes. Made cmake support to
  cover more targets and options.
- Made the aiff, wav and raw file writer drivers configurable: the
  library can be configured and compiled without any audio output
  drivers if so required, except for drv_nos ('nosound') of course.
- Minor compilation fixes against ancient software versions.
- Merged an updated gp32 driver (it is still an untested driver...)


Summary of changes between libmikmod 3.3.3 and libmikmod 3.3.4 ():
==========================================================================

libmikmod 3.3.4 was released on 08-Dec-2013.

- libmikmod.m4: fixed so that it works with C++ compilers.
- cmake: fixed a cpack version number issue.
- Fix CVE-2006-3879 (Secunia 21196) for Graoumf tracker (gt2) loader.
  (the loader is non-functional yet but the issue was there.)
- Fix memory leaks in the Graoumf tracker (gt2) loader.
- UMX loader: Support umx music files from Unreal 1997/98 beta version.
- S3M loader: Enforce the 64000 bytes sample length limit, which has
  been in effect since libmikmod-v3.1.10, only for tracker id 1, i.e.
  only if setting the S3MIT_SCREAM flag during track conversion. Fixes
  playback of some rare brokenly prepared files - e.g. Arena2.umx from
  the unreal game community add-on level decyberduel.
- ULT loader: Fix version array size (was 1 less then its initializer.)
- ESD driver: Fix signature for esd_playstream function pointer (const)
- ALSA driver: Remove unused function pointers.
- The library is compilable using C++ compilers.


Summary of changes between libmikmod 3.3.2 and libmikmod 3.3.3 ():