@@ -16,6 +16,7 @@ EXTRA_DIST = CMakeLists.txt \
              drv_oss.c    \
              drv_osx.c    \
              drv_pipe.c   \
+             drv_pulseaudio.c \
              drv_raw.c    \
              drv_sam9407.c\
              drv_sb.c     \
